--- a/dot_config/waybar/config.jsonc
+++ b/dot_config/waybar/config.jsonc
@@ -163,12 +163,11 @@
             },
             "custom/mediaplayer": {
                 "format": "{0} {1}",
-                //"format": "{}",
                 "return-type": "json",
                 "max-length": 60,
                 "on-click": "playerctl play-pause",
                 "on-click-right": "pactl set-sink-mute @DEFAULT_SINK@ toggle",
-                "smooth-scrolling-threshold": 1, // This value was tested using a trackpad, it should be lowered if using a mouse.
+                "smooth-scrolling-threshold": 1,
                 "on-scroll-up": "playerctl next",
                 "on-scroll-down": "playerctl previous",
                 "escape": true,
