--- a/dot_config/waybar/config.jsonc
+++ b/dot_config/waybar/config.jsonc
@@ -12,7 +12,8 @@
                 "sway/scratchpad"
         ],
         "modules-center": [
-            "custom/mediaplayer"
+            "custom/mediaplayer",
+            "custom/cava"
         ],
         "modules-right": [
             "custom/weather",
@@ -160,6 +161,9 @@
                 },
                 "on-click": "pavucontrol",
                 "on-click-right": "pactl set-sink-mute @DEFAULT_SINK@ toggle"
+            },
+            "custom/cava": {
+                "exec": "sleep 3 && cava -p ~/.config/cava/cava.conf | sed -u 's/;//g;s/0/0/g;s/1/1/g;s/2/2/g;s/3/3/g;s/4/4/g;s/5/5/g;s/6/6/g;s/7/7/g;s/8/8/g;s/9/9/g;'"
             },
             "custom/mediaplayer": {
                 "format": "{0} {1}",
