--- a/dot_config/waybar/config.jsonc
+++ b/dot_config/waybar/config.jsonc
@@ -12,8 +12,8 @@
                 "sway/scratchpad"
         ],
         "modules-center": [
-            "custom/mediaplayer",
-            "custom/cava"
+            "custom/cava",
+            "custom/mediaplayer"
         ],
         "modules-right": [
             "custom/weather",
@@ -163,35 +163,7 @@
                 "on-click-right": "pactl set-sink-mute @DEFAULT_SINK@ toggle"
             },
             "custom/cava": {
-                "cava_config": "~/.config/cava/config",
-                "framerate": 30,
-                "autosens": 1,
-                "sensitivity": 100,
-                "bars": 14,
-                "lower_cutoff_freq": 50,
-                "higher_cutoff_freq": 10000,
-                "method": "pulse",
-                "source": "auto",
-                "stereo": true,
-                "reverse": false,
-                "bar_delimiter": 0,
-                "monstercat": false,
-                "waves": false,
-                "noise_reduction": 0.77,
-                "input_delay": 4,
-                "format-icons": [
-                    "▁",
-                    "▂",
-                    "▃",
-                    "▄",
-                    "▅",
-                    "▆",
-                    "▇",
-                    "█"
-                ],
-                "actions": {
-                    "on-click-right": "mode"
-                }
+                    "exec": "sleep 3 && cava -p /home/username/.config/cava/cava.conf | sed -u 's/;//g;s/0/0/g;s/1/1/g;s/2/2/g;s/3/3/g;s/4/4/g;s/5/5/g;s/6/6/g;s/7/7/g;s/8/8/g;s/9/9/g;'"
             },
             "custom/mediaplayer": {
                 "format": "{0} {1}",
