--- a/dot_config/waybar/config.jsonc
+++ b/dot_config/waybar/config.jsonc
@@ -167,7 +167,7 @@
                     "bars": 14,
                     "lower_cutoff_freq": 50,
                     "higher_cutoff_freq": 10000,
-                    "method": "pulse",
+                    "method": "auto",
                     "source": "auto",
                     "stereo": true,
                     "reverse": false,
