--- a/dot_config/waybar/config.jsonc
+++ b/dot_config/waybar/config.jsonc
@@ -163,8 +163,8 @@
                 "on-click-right": "pactl set-sink-mute @DEFAULT_SINK@ toggle"
             },
             "custom/cava": {
-                    "exec": "sleep 3 && cava -p /home/b0nz1cu5/.config/cava/config | sed -u 's/;//g;s/0/0/g;s/1/1/g;s/2/2/g;s/3/3/g;s/4/4/g;s/5/5/g;s/6/6/g;s/7/7/g;s/8/8/g;s/9/9/g;'",
-                    "bars": 14,
+                    "exec": "sleep 3 && cava -p ${HOME}/.config/cava/config | sed -u 's/;//g;s/0/0/g;s/1/1/g;s/2/2/g;s/3/3/g;s/4/4/g;s/5/5/g;s/6/6/g;s/7/7/g;s/8/8/g;s/9/9/g;'",
+                    "bars": 8,
                     "lower_cutoff_freq": 50,
                     "higher_cutoff_freq": 10000,
                     "method": "auto",
@@ -200,7 +200,7 @@
                 "on-scroll-up": "playerctl next",
                 "on-scroll-down": "playerctl previous",
                 "escape": true,
-                "exec": "$HOME/.config/waybar/mediaplayer.py 2> /dev/null"
+                "exec": "${HOME}/.config/waybar/mediaplayer.py 2> /dev/null"
             },
             "custom/weather": {
                 "exec": "${HOME}/.config/waybar/scripts/weather/get_weather.sh Lake+Forest",
