--- a/dot_config/waybar/config.jsonc
+++ b/dot_config/waybar/config.jsonc
@@ -259,8 +259,11 @@
                 "on-click": "systemadm"
             },
             "temperature": {
+                "hwmon-path": "/sys/class/hwmon/hwmon2/temp1_input",
                 "critical-threshold": 80,
+                "interval": 10,
                 "format": "{temperatureF}°F {icon}",
+                "format-critical": "{temperatureF}°F ",
                 "format-icons": [
                     "",
                     "",
