[Changed] Powermenu handling

--- a/dot_config/fuzzel/fuzzel.ini
+++ b/dot_config/fuzzel/fuzzel.ini
@@ -3,7 +3,7 @@ font=Hack Nerd Font Mono Regular:size=10
 dpi-aware=yes
 # use-bold=no
 prompt="❯  "
-placeholder="Give it to me John-boy!"
+placeholder="Choose wisely..."
 # icon-theme=hicolor
 icons-enabled=yes
 fields=name,generic,comment,categories,filename,keywords
@@ -22,7 +22,7 @@ list-executables-in-path=yes
 anchor=center
 # x-margin=0
 # y-margin=0
-lines=16
+lines=32
 width=40
 tabs=6
 horizontal-pad=50
