--- a/dot_config/waybar/config.jsonc
+++ b/dot_config/waybar/config.jsonc
@@ -447,8 +447,8 @@
                 }
             },
             "clock": {
-                "format": "󰅐 {:%H:%M}",
-                "format-alt": "󰅐 {:%OI:%M %p}",
+                "format": "󱩸 {:%OI:%M %p}",
+                "format-alt": "󰅐 {:%H:%M}",
                 "tooltip-format": " {:%A %m/%d}\n\n<tt><small>{calendar}</small></tt>",
                 "on-click-right": "/usr/bin/evolution --component=calendar",
                 "calendar": {
