[Fixed] Bad WAYLAND_DISPLAY due to XDG

--- a/dot_config/environment.d/10-envvars.conf
+++ b/dot_config/environment.d/10-envvars.conf
@@ -1,7 +1,7 @@
 
 # Wayland
 WAYLAND_DISPLAY=wayland-1
-DISPLAY=$WAYLAND_DISPLAY
+DISPLAY=:0
 
 # Xserver
 XCURSOR_THEME=Adwaita
@@ -23,6 +23,6 @@ QT_QPA_PLATFORM=wayland
 QT_QPA_PLATFORMTHEME=qt5ct
 QT_PLATFORMTHEME=qt5ct
 QT_PLATFORM_PLUGIN=qt5ct
-QT_STYLE_OVERRIDE=kvantum
+#QT_STYLE_OVERRIDE=kvantum
 
 
