--- a/dot_config/private_VSCodium/User/settings.json
+++ b/dot_config/private_VSCodium/User/settings.json
@@ -97,5 +97,19 @@
     },
     "workbench.colorTheme": "Moonlight II",
     "mssql.enableRichExperiences": true,
-    "window.customTitleBarVisibility": "auto"
+    "window.customTitleBarVisibility": "auto",
+    "[dockercompose]": {
+        "editor.insertSpaces": true,
+        "editor.tabSize": 2,
+        "editor.autoIndent": "advanced",
+        "editor.quickSuggestions": {
+            "other": true,
+            "comments": false,
+            "strings": true
+        },
+        "editor.defaultFormatter": "redhat.vscode-yaml"
+    },
+    "[github-actions-workflow]": {
+        "editor.defaultFormatter": "redhat.vscode-yaml"
+    }
 }
