--- a/dot_config/waybar/config.jsonc
+++ b/dot_config/waybar/config.jsonc
@@ -8,7 +8,7 @@
         "position": "top",
         "spacing": 6,
         "modules-left": [
-                "group/activity"
+            "group/system-tray"
         ],
         "modules-center": [
             "custom/cava",
@@ -22,7 +22,7 @@
             "group/hardware",
             "wireplumber"
         ],
-                "group/activity": {
+                "group/system-tray": {
                     "orientation": "inherit",
                     "drawer": {
                         "transition-duration": 500,
