--- a/dot_config/waybar/config.jsonc
+++ b/dot_config/waybar/config.jsonc
@@ -45,6 +45,18 @@
                         "privacy"
                     ]
                 },
+                "group/screenrecord": {
+                    "orientation": "inherit",
+                    "drawer": {
+                        "transition-duration": 500,
+                        "children-class": "screenrecord",
+                        "transition-left-to-right": false
+                    },
+                    "modules": [
+                        "custom/grimshot",
+                        "custom/wfrecord"
+                    ]
+                },
                 "group/system": {
                     "orientation": "inherit",
                     "drawer": {
@@ -56,18 +68,6 @@
                         "systemd-failed-units",
                         "custom/vm",
                         "custom/containers"
-                    ]
-                },
-                "group/screenrecord": {
-                    "orientation": "inherit",
-                    "drawer": {
-                        "transition-duration": 500,
-                        "children-class": "screenrecord",
-                        "transition-left-to-right": false
-                    },
-                    "modules": [
-                        "custom/grimshot",
-                        "custom/wfrecord"
                     ]
                 },
                 "group/hardware": {
@@ -101,7 +101,7 @@
                     ""
                 ],
                 "tooltip": true,
-                "tooltip-format": "{app}: {title}"
+                "tooltip-format": "{app} : {title}"
             },
             "custom/cava": {
                     "exec": "sleep 3 && cava -p ${HOME}/.config/cava/config | sed -u 's/;//g;s/0/0/g;s/1/1/g;s/2/2/g;s/3/3/g;s/4/4/g;s/5/5/g;s/6/6/g;s/7/7/g;s/8/8/g;s/9/9/g;'",
@@ -132,7 +132,7 @@
                     }
             },
             "custom/mediaplayer": {
-                "format": "{0} - {1}",
+                "format": "{0} : {1}",
                 "return-type": "json",
                 "max-length": 60,
                 "on-click": "playerctl play-pause",
@@ -143,6 +143,13 @@
                 "on-scroll-down": "playerctld unshift",
                 "escape": true,
                 "exec": "${HOME}/.config/waybar/mediaplayer.py 2> /dev/null"
+            },
+            "custom/weather": {
+                "exec": "wttrbar --ampm --custom-indicator '{temp_F} {ICON} {FeelsLikeF}' --date-format '%m/%d' --location 'Lake Forest, IL' --hide-conditions",
+                "return-type": "json",
+                "format": "{}",
+                "tooltip": true,
+                "interval": 3600
             },
             "privacy": {
                 "icon-spacing": 4,
@@ -166,64 +173,8 @@
                     }
                 ]
             },
-            "wireplumber": {
-                "scroll-step": 2,
-                "format": "{volume}% {icon}",
-                "format-bluetooth": "{volume}%  ",
-                "format-bluetooth-muted": "  ",
-                "format-muted": " ",
-                "format-source": "{volume}% ",
-                "format-source-muted": "",
-                "format-icons": {
-                    "headphone": "",
-                    "hands-free": "󰙌",
-                    "headset": "󰋎",
-                    "phone": "",
-                    "portable": "",
-                    "car": "",
-                    "default": [
-                        "",
-                        "",
-                        ""
-                    ]
-                },
-            "on-click": "pavucontrol",
-            "on-click-right": "pactl set-sink-mute @DEFAULT_SINK@ toggle"
-            },
-            "pulseaudio": {
-                "scroll-step": 2,
-                "format": "{volume}% {icon} {format_source}",
-                "format-bluetooth": "{volume}% {icon} {format_source}",
-                "format-bluetooth-muted": " {icon} {format_source}",
-                "format-muted": " {format_source}",
-                "format-source": "{volume}% ",
-                "format-source-muted": "",
-                "format-icons": {
-                    "headphone": "",
-                    "hands-free": "󰙌",
-                    "headset": "󰋎",
-                    "phone": "",
-                    "portable": "",
-                    "car": "",
-                    "default": [
-                        "",
-                        "",
-                        ""
-                    ]
-                },
-                "on-click": "pavucontrol",
-                "on-click-right": "pactl set-sink-mute @DEFAULT_SINK@ toggle"
-            },
-            
-            "custom/weather": {
-                "exec": "wttrbar --ampm --custom-indicator '{temp_F} {ICON} {FeelsLikeF}' --date-format '%m/%d' --location 'Lake Forest, IL' --hide-conditions",
-                "return-type": "json",
-                "format": "{}",
-                "tooltip": true,
-                "interval": 3600
-            },
             "custom/grimshot": {
-                "format": "",
+                "format": "",
                 "tooltip": false,
                 "on-click": "grimshot --notify save output - | swappy -f -",
                 "on-click-middle": "grimshot --notify save area - | swappy -f -",
@@ -239,52 +190,77 @@
                 "on-click-right": "~/.config/waybar/scripts/record/wfrecord-stop.sh",
                 "signal": 8
             },
+            "systemd-failed-units": {
+                "hide-on-ok": false,
+                "format": "✗ : {nr_failed}",
+                "format-ok": "",
+                "system": true,
+                "user": false,
+                "on-click": "systemadm"
+            },
             "custom/vm": {
                 "format": "  ",
-                "interval": 10,
+                "interval": 60,
                 "return-type": "json",
                 "exec": "~/.config/waybar/scripts/workspace/kvm-monitor.sh",
                 "on-click": "~/.config/waybar/scripts/workspace/kvm.sh"
             },
             "custom/containers": {
                 "format": "󰡨  ",
-                "interval": 10,
+                "interval": 60,
                 "return-type": "json",
                 "exec": "~/.config/waybar/scripts/workspace/containers-monitor.sh"
             },
-            "systemd-failed-units": {
-                "hide-on-ok": false,
-                "format": "✗ {nr_failed}",
-                "format-ok": "",
-                "system": true,
-                "user": false,
-                "on-click": "systemadm"
-            },
-            "temperature": {
-                "hwmon-path": "/sys/class/hwmon/hwmon2/temp1_input",
-                "critical-threshold": 80,
-                "interval": 10,
-                "format": "{temperatureF}°F {icon}",
-                "format-critical": "{temperatureF}°F ",
-                "format-icons": [
-                    "",
-                    "",
-                    ""
-                ]
+            "wireplumber": {
+                "scroll-step": 2,
+                "format": "{volume}% : {icon} ",
+                "format-bluetooth": "{volume}% :  ",
+                "format-bluetooth-muted": "󰝟 :  ",
+                "format-muted": "󰝟 ",
+                "format-source": "{volume}% :  ",
+                "format-source-muted": "  ",
+                "format-icons": {
+                    "headphone": "  ",
+                    "hands-free": " 󰙌 ",
+                    "headset": " 󰋎 ",
+                    "phone": "  ",
+                    "portable": "  ",
+                    "car": "  ",
+                    "default": [
+                        "  ",
+                        "  ",
+                        "  "
+                    ]
+                },
+            "on-click": "pavucontrol",
+            "on-click-right": "pactl set-sink-mute @DEFAULT_SINK@ toggle",
+            "on-click-middle": "qpwgraph"
             },
             "battery": {
                 "states": {
                     "warning": 30,
                     "critical": 15
                 },
-                "format": "{icon} {capacity}%",
+                "format": "{icon} : {capacity}%",
                 "format-icons": [
-                    "",
-                    "",
-                    "",
-                    "",
-                    ""
+                    "  ",
+                    "  ",
+                    "  ",
+                    "  ",
+                    "  "
                 ]
+            },
+            "temperature": {
+                            "hwmon-path": "/sys/class/hwmon/hwmon2/temp1_input",
+                            "critical-threshold": 80,
+                            "interval": 10,
+                            "format": "{temperatureF}°F : {icon}",
+                            "format-critical": "{temperatureF}°F : ",
+                            "format-icons": [
+                                "  ",
+                                "  ",
+                                "  "
+                            ]
             },
             "cpu": {
                 "interval": 5,
@@ -311,13 +287,22 @@
             },
             "network": {
                 "format-disabled": " Disabled",
-                "format-wifi": " {bandwidthDownBits:>} 󰶡 {bandwidthUpBits:>} 󰶣",
+                "format-wifi": " : {bandwidthDownBits:>} 󰶡 : {bandwidthUpBits:>} 󰶣",
                 "tooltip-format-wifi": "{essid}",
-                "format-ethernet": "󰈀 {bandwidthDownBits:>} 󰶡 {bandwidthUpBits:>} 󰶣",
+                "format-ethernet": "󰈀 : {bandwidthDownBits:>} 󰶡 : {bandwidthUpBits:>} 󰶣",
                 "tooltip-format-ethernet": "{ifname}: {ipaddr}/{cidr}",
-                "format-disconnected": " Disconnected",
+                "format-disconnected": " : Disconnected",
                 "on-click": "footclient -T waybar_nmtui -e nmtui",
                 "interval": 2
+            },
+            "keyboard-state": {
+                "numlock": true,
+                "capslock": true,
+                "format": "{name} : {icon} ",
+                "format-icons": {
+                    "locked": "",
+                    "unlocked": ""
+                }
             },
             "custom/keyboard-layout": {
                 "exec": "i=$(swaymsg -t get_inputs); echo \"\"; echo \"$i\" | grep -m1 'xkb_active_layout_name' | cut -d '\"' -f4",
@@ -325,15 +310,6 @@
                 "interval": 30,
                 "signal": 1,
                 "on-click": "~/.config/waybar/scripts/custom/keyhint.sh"
-            },
-            "keyboard-state": {
-                "numlock": true,
-                "capslock": true,
-                "format": "{name}  {icon} ",
-                "format-icons": {
-                    "locked": "",
-                    "unlocked": ""
-                }
             }
     },
     {
@@ -371,7 +347,7 @@
                 ]
             },
             "custom/launcher": {
-                "format": "<span size='x-large'></span>",
+                "format": "<span size='x-large'>󰣇</span>",
                 "on-click": "exec nwg-drawer",
                 "tooltip": false
             },
@@ -420,7 +396,7 @@
                 "tooltip-format-deactivated": "Idle Inhibitor Deactivated"
             },
             "backlight": {
-                "format": "{icon} {percent}%",
+                "format": "{icon} : {percent}%",
                 "format-icons": [
                     "󰄰",
                     "󰪞",
@@ -437,7 +413,7 @@
                 "on-scroll-up": "brightnessctl -c backlight set +2%"
             },
             "power-profiles-daemon": {
-                "format": "{icon} {profile}",
+                "format": "{icon} : {profile}",
                 "tooltip-format": "Power profile: {profile}\nDriver: {driver}",
                 "tooltip": true,
                 "format-icons": {
@@ -448,9 +424,9 @@
                 }
             },
             "clock": {
-                "format": "󱩸 {:%OI:%M %p}",
-                "format-alt": "󰅐 {:%H:%M}",
-                "tooltip-format": " {:%A %m/%d}\n\n<tt><small>{calendar}</small></tt>",
+                "format": "󱩸 : {:%OI:%M %p}",
+                "format-alt": "󰅐 : {:%H:%M}",
+                "tooltip-format": " : {:%A %m/%d}\n\n<tt><small>{calendar}</small></tt>",
                 "on-click-right": "/usr/bin/evolution --component=calendar",
                 "calendar": {
                     "on-scroll": 1,
@@ -474,7 +450,7 @@
             },
             "custom/notification": {
                 "tooltip": false,
-                "format": "{} {icon}",
+                "format": "{} : {icon}",
                 "format-icons": {
                     "notification": "<span foreground='red'><sup></sup></span>",
                     "none": "",
