--- a/dot_config/sway/config
+++ b/dot_config/sway/config
@@ -21,8 +21,9 @@ include $HOME/.config/sway/config.d/20-autoset_env
 # include the default config
 include $HOME/.config/sway/config.d/30-keybindings
 
-# include outputs
-include $HOME/.config/sway/config.d/40-outputs
+# include outputs (un-numbered due to conflict with myriads of
+# of arandr display applications like nwg-displays and wlrandr)
+include $HOME/.config/sway/outputs
 
 # include application defaults
 include $HOME/.config/sway/config.d/50-window_defaults
@@ -42,6 +43,7 @@ include $HOME/.config/sway/config.d/74-clamshell
 # include autostart apps
 include $HOME/.config/sway/config.d/80-autostart_my_apps
 include $HOME/.config/sway/config.d/81-autostart_my_PWAs
+include $HOME/.config/sway/config.d/82-autostart_my_phone_apps
 
 # include themes
 include $HOME/.config/sway/config.d/90-theme
